# sortify

./: README.md  docker-compose.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: models.py  routes.py
backend/api/helpers/: albums.py  globalvars.py  main.py  playlists.py  sort.py  tracks.py
backend/api/stats/: Berq.txt
backend/auth/: helpers.py  models.py  routes.py
backend/db/: init.py
backend/spotify/: helpers.py  models.py  routes.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: login-form.tsx
frontend/src/components/ui/: dropdown-card.tsx
frontend/src/pages/: Artist.tsx  AuthCallback.tsx  Layout.tsx  Login.tsx  NoPage.tsx  Search.tsx  Test.tsx
frontend/src/types/: dropdown-card.ts
