[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi==0.116.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.13.3",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]==0.22.0",
]
